# koto

./: .gitignore  Cargo.toml  Procfile  README.md  index.html  koto_bg.d.ts  koto_bg.js  package-lock.json  package.json  webpack.config.js
.firebase/: hosting.ZGlzdA.cache
example/: example.koto  hoge.koto  transpiler.koto
js/: import.js  index.js  package-lock.json  package.json  server.js  webpack.config.js
programs/: fuga.koto
src/: lib.rs  main.rs
src/ast/: Ast.rs  Parsing.rs  asts.rs  error.rs  mod.rs  parsing.rs
src/compiler/: arithmetic.rs  fors.rs  function.rs  ifs.rs  mod.rs  to_c.rs  variable.rs
src/interpreter/: Arithmetic.rs  Error.rs  For.rs  Function.rs  Interpreter.rs  Variable.rs  arithmetic.rs  error.rs  fors.rs  function.rs  ifs.rs  interpreters.rs  mod.rs  variable.rs
src/lexer/: Lexer.rs  Token.rs  lexers.rs  mod.rs  token.rs
static/: index.html
wasm/: koto.d.ts  koto.js  koto_bg.d.ts  koto_bg.js
