[package]
name = "koto"
version = "0.1.0"
authors = ["garebare <garedaiki@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
wasm-bindgen = "0.2.64"

[dependencies.web-sys]
version = "0.3.41"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]